# crunch

./: .gitignore  .travis.yml  CMakeLists.txt
CMakeModules/: Findlibm.cmake
crnlib/: CMakeLists.txt  crn_arealist.cpp  crn_assert.h  crn_clusterizer.h  crn_color.h  crn_colorized_console.cpp  crn_command_line_params.cpp  crn_comp.cpp  crn_dxt1.cpp  crn_dxt_hc.cpp  crn_dynamic_string.cpp  crn_etc.cpp  crn_file_utils.cpp  crn_helpers.h  crn_image.h  crn_image_utils.cpp  crn_jpgd.cpp  crn_ktx_texture.cpp  crn_matrix.h  crn_mem.cpp  crn_miniz.cpp  crn_mipmapped_texture.cpp  crn_qdxt1.cpp  crn_qdxt5.cpp  crn_resampler.cpp  crn_rg_etc1.cpp  crn_ryg_dxt.cpp  crn_stb_image.cpp  crn_symbol_codec.cpp  crn_texture_comp.cpp  crn_threaded_clusterizer.h  crn_threaded_resampler.cpp  crn_threading_pthreads.cpp  crn_traits.h  crn_tree_clusterizer.h  crn_vec.h  crnlib.cpp  lzma_LzmaEnc.cpp  lzma_LzmaLib.cpp
crunch/: CMakeLists.txt  corpus_test.cpp  crunch.cpp
example1/: CMakeLists.txt
example2/: CMakeLists.txt
example3/: CMakeLists.txt
inc/: crn_decomp.h
